目录结构更加科学

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <link rel=stylesheet type="text/css" href="css/index.css">
-        <script src="js/init.js"></script>
+        <script src="bundle.js"></script>
     </head>
     <body>
         <div id="Bayan">
+            <div id="key0" class="box"></div>
             <div id="key1" class="box"></div>
             <div id="key2" class="box"></div>
             <div id="key3" class="box"></div>
-            <div id="key4" class="box"></div>
         </div>
     </body>
 </html>
