change encode as utf8

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Color Bayan</title>
         <link rel=stylesheet type="text/css" href="css/index.css">
 
@@ -50,8 +51,9 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                <h5 class="white-text">Make Music Social.</h5>
+                <p class="grey-text text-lighten-4">One should uphold his country’s interest with his life, he should not do things just to pursue his personal gains and he should not be evade responsibilities for fear of personal loss.
+</p>
               </div>
             </div>
           </div>
