更改界面，加入Tab

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                 <li class="divider"></li>
             <li><a href="#!">three</a></li>
         </ul>
-        <nav>
+        <nav class="nav-extended">
             <div class="nav-wrapper blue">
                 <a class="brand-logo center">Color Bayan</a>
                 <ul class="right hide-on-med-and-down">
@@ -36,14 +36,22 @@
                     <li><a class="dropdown-button" data-activates="selectInstrument">切换乐器<i class="material-icons right">arrow_drop_down</i></a></li>
                 </ul>
             </div>
+            <div class="nav-content">
+                <ul class="tabs grey lighten-5">
+                    <li class="tab"><a href="#Bayan">Bayan</a></li>
+                    <li class="tab"><a href="#Piano">Piano</a></li>
+                </ul>
+            </div>
         </nav>
 
         <!--主体部分-->
-        <div id="Bayan" class="parallax-container">
+        <div id="Bayan" class="parallax-container col s12 contain">
             <div id="key0" class="box"></div>
             <div id="key1" class="box"></div>
             <div id="key2" class="box"></div>
             <div id="key3" class="box"></div>
+        </div>
+        <div id="Piano" class="parallax-container col s12 contain">
         </div>
 
         <!--页脚-->
