修复自适应的bug

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Color Bayan</title>
         <link rel=stylesheet type="text/css" href="css/index.css">
 
@@ -15,24 +16,49 @@
     <body>
         <!--页眉-->
         <ul id="selectMusic" class="dropdown-content">
-            <li><a href="#!">one</a></li>
+            <li><a href="#!">1</a></li>
                 <li class="divider"></li>
-            <li><a href="#!">two</a></li>
+            <li><a href="#!">2</a></li>
                 <li class="divider"></li>
-            <li><a href="#!">three</a></li>
+            <li><a href="#!">3</a></li>
         </ul>
         <ul id="selectInstrument" class="dropdown-content">
             <li><a href="#!">one</a></li>
                 <li class="divider"></li>
             <li><a href="#!">two</a></li>
-                <li class="divider"></li>
+                <li class="divider"></li> 
             <li><a href="#!">three</a></li>
+        </ul>
+        <ul id="mobile" class="side-nav">
+            <ul class="collapsible" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">queue_music</i>选择歌曲</div>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li><a href="#!">1</a></li>
+                            <li><a href="#!">2</a></li>
+                            <li><a href="#!">3</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">swap_horiz</i>切换乐器</div>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li><a href="#!">one</a></li>
+                            <li><a href="#!">two</a></li>
+                            <li><a href="#!">three</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </ul>
         <nav class="nav-extended">
             <div class="nav-wrapper blue">
+                <a data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
                 <a class="brand-logo center">Color Bayan</a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a class="dropdown-button" data-activates="selectInstrument">选择歌曲<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a class="dropdown-button" data-activates="selectMusic">选择歌曲<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a class="dropdown-button" data-activates="selectInstrument">切换乐器<i class="material-icons right">arrow_drop_down</i></a></li>
                 </ul>
             </div>
@@ -60,7 +86,7 @@
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Make Music Social.</h5>
-                <p class="grey-text text-lighten-4">One should uphold his country’s interest with his life, he should not do things just to pursue his personal gains and he should not be evade responsibilities for fear of personal loss.
+                <p class="grey-text text-lighten-4">One should uphold his country’s interest with his life, he should not do things just to pursue his personal gains and he should not evade responsibilities for fear of personal loss.
 </p>
               </div>
             </div>
@@ -72,5 +98,13 @@
             </div>
           </div>
         </footer>
+        
+        <script>
+            (function($){
+                $(function(){
+                    $('.button-collapse').sideNav();
+                    }); // end of document ready
+            })(jQuery); // end of jQuery name space
+        </script>
     </body>
 </html>
