--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                 </li>
             </ul>
         </ul>
-        <nav class="nav-extended">
+        <nav class="nav-extended blue darken-3">
             <div class="nav-wrapper blue">
                 <a data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
                 <a class="brand-logo center">Color Bayan</a>
@@ -62,8 +62,8 @@
                     <li><a class="dropdown-button" data-activates="selectInstrument">切换乐器<i class="material-icons right">arrow_drop_down</i></a></li>
                 </ul>
             </div>
-            <div class="nav-content">
-                <ul class="tabs grey lighten-5">
+            <div class="nav-content container">
+                <ul class="tabs tabs-transparent">
                     <li class="tab"><a href="#Bayan">Bayan</a></li>
                     <li class="tab"><a href="#Piano">Piano</a></li>
                 </ul>
