--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <!--页眉-->
+        <header>
         <ul id="selectMusic" class="dropdown-content">
             <li><a href="#!">1</a></li>
                 <li class="divider"></li>
@@ -69,16 +70,18 @@
                 </ul>
             </div>
         </nav>
+        </header>
 
         <!--主体部分-->
-        <div id="Bayan" class="parallax-container col s12 contain">
-            <div id="key0" class="box"></div>
-            <div id="key1" class="box"></div>
-            <div id="key2" class="box"></div>
-            <div id="key3" class="box"></div>
-        </div>
-        <div id="Piano" class="parallax-container col s12 contain">
-        </div>
+        <main class="valign-wrapper">
+            <div id="Bayan" class="col s12">
+                <div id="key0" class="box"></div>
+                <div id="key1" class="box"></div>
+                <div id="key2" class="box"></div>
+                <div id="key3" class="box"></div>
+            </div>
+            <div id="Piano" class="col s12"></div>
+        </main>
 
         <!--页脚-->
         <footer class="page-footer blue">
@@ -86,8 +89,6 @@
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Make Music Social.</h5>
-                <p class="grey-text text-lighten-4">One should uphold his country’s interest with his life, he should not do things just to pursue his personal gains and he should not evade responsibilities for fear of personal loss.
-</p>
               </div>
             </div>
           </div>
