--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,7 @@
     <body>
         <!--页眉-->
         <header>
-        <ul id="setkeybd" class="dropdown-content">
-            <li><a href="#!">one</a></li>
-                <li class="divider"></li>
-            <li><a href="#!">two</a></li>
-                <li class="divider"></li> 
-            <li><a href="#!">three</a></li>
-        </ul>
+        <ul id="setkeybd" class="dropdown-content"></ul>
         <ul id="selectMusic" class="dropdown-content">
             <li><a href="#!">1</a></li>
                 <li class="divider"></li>
@@ -76,7 +70,7 @@
                 <a data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
                 <a class="brand-logo center">Color Bayan</a>
                 <ul class="right hide-on-med-and-down">
-                     <li><a class="dropdown-button" data-activates="setkeybd">切换键盘<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a class="dropdown-button" data-activates="setkeybd">切换键盘<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a class="dropdown-button" data-activates="selectMusic">选择歌曲<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a class="dropdown-button" data-activates="selectInstrument">切换乐器<i class="material-icons right">arrow_drop_down</i></a></li>
                 </ul>
