--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,7 @@
             <ul class="collapsible" data-collapsible="accordion">
                 <li>
                     <div class="collapsible-header"><i class="material-icons">track_changes</i>切换键盘</div>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li><a href="#!">1</a></li>
-                            <li><a href="#!">2</a></li>
-                            <li><a href="#!">3</a></li>
-                        </ul>
-                    </div>
+                    <div class="collapsible-body"></div>
                 </li>
                 <li>
                     <div class="collapsible-header"><i class="material-icons">queue_music</i>选择歌曲</div>
@@ -115,8 +109,13 @@
         <script>
             (function($){
                 $(function(){
-                    $('.button-collapse').sideNav();
-                    }); // end of document ready
+                    $('.button-collapse').sideNav({
+                        menuWidth: 300, // Default is 300
+                        edge: 'left', // Choose the horizontal origin
+                        closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                        draggable: true // Choose whether you can drag to open on touch screens
+                    });
+                }); // end of document ready
             })(jQuery); // end of jQuery name space
         </script>
     </body>
