--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Color Bayan</title>
+        
         <link rel=stylesheet type="text/css" href="css/index.css">
+        <link rel=stylesheet type="text/css" href="css/piano.css">
 
         <!--一个material design的库-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
@@ -62,7 +64,34 @@
         <!--主体部分-->
         <main class="valign-wrapper">
             <div id="Bayan" class="col s12"></div>
-            <div id="Piano" class="col s12"></div>
+            <div id="Piano" class="col s12">
+                <!-- <div class="piano-box">
+                    <div class="white-box">
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                        <div class="white-key"></div>
+                    </div>
+                    <div class="black-box">
+                        <div class="black-key"></div>
+                        <div class="black-key"></div>
+                        <div class="key-hidden"></div>
+                        <div class="black-key"></div>
+                        <div class="black-key"></div>
+                        <div class="black-key"></div>
+                        <div class="key-hidden"></div>
+                        <div class="black-key"></div>
+                        <div class="black-key"></div>
+                    </div>
+                </div> -->
+            </div>
         </main>
 
         <!--页脚-->
