--- a/src/index.html
+++ b/src/index.html
@@ -64,34 +64,7 @@
         <!--主体部分-->
         <main class="valign-wrapper">
             <div id="Bayan" class="col s12"></div>
-            <div id="Piano" class="col s12">
-                <!-- <div class="piano-box">
-                    <div class="white-box">
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                        <div class="white-key"></div>
-                    </div>
-                    <div class="black-box">
-                        <div class="black-key"></div>
-                        <div class="black-key"></div>
-                        <div class="key-hidden"></div>
-                        <div class="black-key"></div>
-                        <div class="black-key"></div>
-                        <div class="black-key"></div>
-                        <div class="key-hidden"></div>
-                        <div class="black-key"></div>
-                        <div class="black-key"></div>
-                    </div>
-                </div> -->
-            </div>
+            <div id="Piano" class="col s12"></div>
         </main>
 
         <!--页脚-->
