Add a module named "request" and the "loading" function

--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,30 @@
                 </div>
             </nav>
         </header>
-
         <!--主体部分-->
         <main class="valign-wrapper">
+            <!--<div id="loading" class="row">
+                <div class="div col s8 offset-s2">
+                    <div class="progress">
+                        <div class="indeterminate"></div>
+                    </div>
+                </div>
+            </div>-->
+            <div id="loading" class="invisible">
+                <div class="col s12 m4 center">
+                    <div class="preloader-wrapper big active">
+                        <div class="spinner-layer spinner-blue-only">
+                            <div class="circle-clipper left">
+                                <div class="circle"></div>
+                            </div><div class="gap-patch">
+                                <div class="circle"></div>
+                            </div><div class="circle-clipper right">
+                            <div class="circle"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="Bayan" class="col s12"></div>
             <div id="Piano" class="col s12"></div>
         </main>
@@ -83,6 +104,7 @@
             </div>
           </div>
         </footer>
+        
         
         <script>
             (function($){
