Support to drag file to the page.

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
             </nav>
         </header>
         <!--主体部分-->
-        <main class="valign-wrapper">
+        <main id="main" class="valign-wrapper">
             <!--<div id="loading" class="row">
                 <div class="div col s8 offset-s2">
                     <div class="progress">
