增加触屏事件&&debug

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 
         <!--播放键-->
         <div id="playButton" class="fixed-action-btn horizontal click-to-toggle">
-            <a class="btn-floating btn-large waves-effect waves-light red"><i id="playArrow" class="material-icons">play_arrow</i></a>
+            <a id="realButton" class="btn-floating btn-large waves-effect waves-light red"><i id="playArrow" class="material-icons">play_arrow</i></a>
             <ul>
                 <li class="playProgress" style="margin: 0">
                     <div class="progress" style="margin: 0 auto">
